--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,10 @@
             <artifactId>spring-orm</artifactId>
             <version>5.1.1.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
