fixed error with writing age_restricton and sex

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=Asia/Tbilisi&useSSL=false
-jdbc.username=root
-jdbc.password= Ah6-QH3-eyM-BLP
+jdbc.url=jdbc:mysql://remotemysql.com:3306/N17FYaePQx
+jdbc.username=N17FYaePQx
+jdbc.password= YwoEY4FX88
 
 
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
