--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8080
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-upload.path = D:/FILES/RENDER/DOWN
+upload.path = resources/store.posters
