--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8080
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-upload.path = C:/FILES/save
+upload.path = D:/FILES/save
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
