--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 upload.path = D:/FILES/save
-spring.servlet.multipart.max-file-size=1000MB
-spring.servlet.multipart.max-request-size=1000MB
+spring.servlet.multipart.max-file-size=10000MB
+spring.servlet.multipart.max-request-size=10000MB
