--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://remotemysql.com:3306/N17FYaePQx
-jdbc.username=N17FYaePQx
-jdbc.password= YwoEY4FX88
+jdbc.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11457895
+jdbc.username=sql11457895
+jdbc.password= 9kfiugS8Gr
 
 
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
